# reown-rust

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  cog.toml  justfile
.github/workflows/: ci.yaml  event_pr.yaml  release.yaml
blockchain_api/: Cargo.toml
blockchain_api/src/: lib.rs
contracts/: Eip6492.sol
examples/: basic_client.rs  http_client.rs  session.rs  webhook.rs  websocket_client.rs
relay_benchmark/: Cargo.toml
relay_benchmark/src/: log.rs  main.rs
relay_client/: Cargo.toml
relay_client/src/: client.rs  error.rs  errors.rs  http.rs  lib.rs  websocket.rs
relay_client/src/client/: connection.rs  fetch.rs  inbound.rs  outbound.rs  stream.rs
relay_client/src/websocket/: connection.rs  fetch.rs  inbound.rs  outbound.rs  stream.rs
relay_rpc/: Cargo.toml  build.rs
relay_rpc/contracts/: Create2.sol  Eip1271Mock.sol
relay_rpc/src/: auth.rs  domain.rs  jwt.rs  lib.rs  macros.rs  managed.rs  rpc.rs  serde_helpers.rs  user_agent.rs
relay_rpc/src/auth/: cacao.rs  did.rs  tests.rs
relay_rpc/src/auth/cacao/: header.rs  mod.rs  payload.rs  signature.rs  tests.rs
relay_rpc/src/auth/cacao/signature/: eip1271.rs  eip191.rs  eip6492.rs  get_provider.rs  mod.rs  test_helpers.rs
relay_rpc/src/auth/cacao/signature/eip1271/: TestContract.sol  blockchain_api.rs  get_rpc_url.rs  mod.rs
relay_rpc/src/domain/: tests.rs
relay_rpc/src/rpc/: error.rs  msg_id.rs  tests.rs  watch.rs
relay_rpc/src/user_agent/: tests.rs
sign_api/: Cargo.toml  README.md
sign_api/examples/: session.rs
sign_api/src/: crypto.rs  lib.rs  pairing_uri.rs  rpc.rs
sign_api/src/crypto/: payload.rs  session.rs
sign_api/src/rpc/: params.rs
sign_api/src/rpc/params/: session_delete.rs  session_event.rs  session_extend.rs  session_ping.rs  session_propose.rs  session_request.rs  session_settle.rs  session_update.rs  shared_types.rs
sign_api/src/rpc/params/shared_types/: propose_namespaces.rs  settle_namespaces.rs
src/: lib.rs
wasm_websocket_client/: Cargo.toml  styles.css
wasm_websocket_client/src/: lib.rs  utils.rs
wasm_websocket_demo/: Cargo.toml  README.md  index.html
wasm_websocket_demo/src/: lib.rs  utils.rs
