# Root Crate
[package]
name = "walletconnect_sdk"
version = "0.1.0"
edition = "2021"
authors = ["WalletConnect Team"]
license = "Apache-2.0"

[workspace]
members = [
    "relay_client",
    "relay_rpc",
    "sign_api"
]

[features]
default = ["full"]
full = ["client", "rpc", "sign_api"]
client = ["dep:relay_client"]
rpc = ["dep:relay_rpc"]
sign_api = ["dep:sign_api"]

[dependencies]
relay_client = { path = "./relay_client", optional = true }
relay_rpc = { path = "./relay_rpc", optional = true }
sign_api = { path = "./sign_api", optional = true }

[dev-dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.22", features = ["full"] }
url = "2.3"
warp = { version = "0.3", default-features = false }
serde_json = "1.0"

[[example]]
name = "websocket_client"
required-features = ["client","rpc"]

[[example]]
name = "http_client"
required-features = ["client","rpc"]

[[example]]
name = "webhook"
required-features = ["client","rpc"]
