# Root Crate
[package]
name = "walletconnect_sdk"
version = "0.1.0"
edition = "2021"
authors = ["WalletConnect Team"]
license = "Apache-2.0"

[workspace]
members = ["blockchain_api", "relay_client", "relay_rpc"]
exclude = ["wasm_websocket_client"]

[features]
default = ["full"]
full = ["client", "rpc"]
wasm = ["relay_client/wasm", "client", "rpc"]
wasm-debug = ["relay_client/wasm", "relay_client/wasm-debug", "client", "rpc"]
client = ["relay_client"]
rpc = ["relay_rpc"]

[dependencies]
relay_client = { path = "./relay_client", optional = true }
relay_rpc = { path = "./relay_rpc", optional = true }


[dev-dependencies]
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.22", features = ["full"] }
url = "2.3"
warp = { version = "0.3", default-features = false }
serde_json = "1.0"
rand = "0.8.5"
futures-util = "0.3"
once_cell = "1.19"

[[example]]
name = "websocket_client"
required-features = ["client", "rpc"]

[[example]]
name = "http_client"
required-features = ["client", "rpc"]

[[example]]
name = "webhook"
required-features = ["client", "rpc"]

[lints.clippy]
indexing_slicing = "deny"
