[package]
name = "relay_benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
relay_client = { path = "../relay_client" }
relay_rpc = { path = "../relay_rpc" }
anyhow = "1"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.47", features = ["full"] }
futures-util = "0.3"
future-timing = "0.1"
futures-concurrency = "7.6"
rand = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "parking_lot",
    "json",
    "ansi"
] }
derive_more = { version = "2.0.1", features = ["deref"] }
