[package]
name = "relay_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["tokio-tungstenite/native-tls", "tokio-tungstenite/url"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots", "tokio-tungstenite/url"]

[dependencies]
relay_rpc = { path = "../relay_rpc" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
pin-project = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "wasmbind", "wasm-bindgen"] }
url = "2.3"
http = "1.0.0"

# HTTP client dependencies.
reqwest = { version = "0.12.2", features = ["json"] }

# WebSocket client dependencies.
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
futures-channel = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-tungstenite = { version = "0.24" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio-tungstenite-wasm = { version = "0.3" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3" , features = ["ConsoleEvent"] }
getrandom = { version = "0.2" , features = ["wasm-bindgen", "js"]}

[lints.clippy]
indexing_slicing = "deny"
