[package]
name = "relay_client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
default = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]

[dependencies]
relay_rpc = { path = "../relay_rpc" }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.10"
pin-project = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
url = "2.3"
http = "1.0"

# HTTP client dependencies.
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client dependencies.
tokio = { version = "1.47", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27", features = ["url"] }
futures-channel = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

[lints.clippy]
indexing_slicing = "deny"
