[package]
name = "relay_rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
wasm = [
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:getrandom"
]
cacao = [
    "dep:k256",
    "dep:sha3",
    "dep:alloy-provider",
    "dep:alloy-transport",
    "dep:alloy-transport-http",
    "dep:alloy-rpc-types",
    "dep:alloy-json-rpc",
    "dep:alloy-json-abi",
    "dep:alloy-sol-types",
    "dep:alloy-primitives",
    "dep:alloy-node-bindings",
    "dep:alloy-contract"
]

[dependencies]
bs58 = "0.4"
data-encoding = "2.3"
derive_more = { version = "0.99", default-features = false, features = [
    "display",
    "from",
    "as_ref",
    "as_mut",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-aux = { version = "4.1", default-features = false }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
regex = "1.7"
once_cell = "1.16"
jsonwebtoken = "8.1"
k256 = { version = "0.13", optional = true }
sha3 = { version = "0.10", optional = true }
sha2 = { version = "0.10.6" }
url = "2"
alloy-provider = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-transport = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-contract = { git = "https://github.com/alloy-rs/alloy.git", rev = "d68a6b7", optional = true }
alloy-json-abi = { version = "0.7.0", optional = true }
alloy-sol-types = { version = "0.7.0", optional = true }
alloy-primitives = { version = "0.7.0", optional = true }
strum = { version = "0.26", features = ["strum_macros", "derive"] }

wasm-bindgen = { version = "0.2", optional = true}
web-sys = { version = "0.3", optional = true}
getrandom = { version = "0.2", features = ["js"], optional = true}

[dev-dependencies]
tokio = { version = "1.35.1", features = ["test-util", "macros"] }

[build-dependencies]
serde_json = "1.0"
hex = "0.4.3"

[lints.clippy]
indexing_slicing = "deny"
