[package]
name = "relay_rpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
cacao = ["dep:k256", "dep:sha3", "dep:alloy"]
cacao-tests = []

[dependencies]
bs58 = "0.4"
data-encoding = "2.3"
derive_more = { version = "2.0", default-features = false, features = [
    "display",
    "from",
    "as_ref",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-aux = { version = "4.1", default-features = false }
serde_json = "1.0"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
regex = "1.7"
once_cell = "1.16"
jsonwebtoken = "8.1"
k256 = { version = "0.13", optional = true }
sha3 = { version = "0.10", optional = true }
sha2 = "0.10"
url = "2"
alloy = { version = "0.3", optional = true, features = [
    "json-rpc",
    "provider-http",
    "contract",
    "rpc-types-eth",
] }
strum = { version = "0.26", features = ["strum_macros", "derive"] }
enum-as-inner = "0.6"

[dev-dependencies]
tokio = { version = "1.47", features = ["test-util", "macros"] }
alloy = { version = "0.3", features = ["node-bindings"] }

[build-dependencies]
serde_json = "1.0"
hex = "0.4"

[lints.clippy]
indexing_slicing = "deny"
