[package]
name = "sign_api"
version = "0.1.0"
edition = "2021"

[dependencies]
base58 = "0.2"
base64 = "0.21"
base64-url = "2.0"
chacha20poly1305 = "0.10"
chrono = "0.4"
hex = "0.4"
hex-literal = "0.4"
hkdf = "0.12"
lazy_static = "1.4"
once_cell = "1.16"
paste = "1.0"
rand = "0.8"
regex = "1.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
url = "2.4"

[dev-dependencies]
# Serialization/Deserealization changes order of fields. Preserving order
# makes it easier to construct the unittests.
serde_json = { version = "1.0", features = ["preserve_order"] }

anyhow = "1"
